--- a/src/app/user-login/user-login.component.css
+++ b/src/app/user-login/user-login.component.css
@@ -21,49 +21,8 @@
   padding: 80px 0px;
 }/*#MAIN_1*/
 #MAIN_1{
-  height: 300px;
-  background-color: #cccccc;
-  background-image: linear-gradient(rebeccapurple,darkorchid);
+  background: linear-gradient(to right, #022138, #003b64);
 }
-
-#MAIN_1:after {
-  box-sizing: border-box;
-  clear: both;
-  color: rgb(73, 73, 74);
-  content: '"' '"';
-  display: table;
-  height: 0px;
-  text-decoration: none solid rgb(73, 73, 74);
-  text-shadow: rgba(0, 0, 0, 0.004) 1px 1px 1px;
-  text-size-adjust: 100%;
-  width: 0px;
-  column-rule-color: rgb(73, 73, 74);
-  perspective-origin: 0px 0px;
-  transform-origin: 0px 0px;
-  caret-color: rgb(73, 73, 74);
-  border: 0px none rgb(73, 73, 74);
-  font: normal normal 400 normal 13px / 19.5px Arial, Helvetica, sans-serif;
-  outline: rgb(73, 73, 74) none 0px;
-}/*#MAIN_1:after*/
-
-#MAIN_1:before {
-  box-sizing: border-box;
-  color: rgb(73, 73, 74);
-  content: '"' '"';
-  display: table;
-  height: 0px;
-  text-decoration: none solid rgb(73, 73, 74);
-  text-shadow: rgba(0, 0, 0, 0.004) 1px 1px 1px;
-  text-size-adjust: 100%;
-  width: 0px;
-  column-rule-color: rgb(73, 73, 74);
-  perspective-origin: 0px 0px;
-  transform-origin: 0px 0px;
-  caret-color: rgb(73, 73, 74);
-  border: 0px none rgb(73, 73, 74);
-  font: normal normal 400 normal 13px / 19.5px Arial, Helvetica, sans-serif;
-  outline: rgb(73, 73, 74) none 0px;
-}/*#MAIN_1:before*/
 
 #DIV_2 {
   bottom: 0px;
@@ -235,20 +194,16 @@
   font: normal normal 400 normal 15px / normal Arial, Helvetica, sans-serif;
   outline: rgb(73, 73, 74) none 0px;
   padding: 5px;
-}/*#INPUT_11*/
+}
 
 #DIV_12 {
-  bottom: 0px;
+  margin: 30px 0;
   box-sizing: border-box;
   color: rgb(73, 73, 74);
   height: 57px;
-  left: 0px;
-  position: relative;
-  right: 0px;
   text-decoration: none solid rgb(73, 73, 74);
   text-shadow: rgba(0, 0, 0, 0.004) 1px 1px 1px;
   text-size-adjust: 100%;
-  top: 0px;
   width: 338px;
   column-rule-color: rgb(73, 73, 74);
   perspective-origin: 169px 28.5px;
@@ -257,7 +212,7 @@
   border: 0px none rgb(73, 73, 74);
   font: normal normal 400 normal 13px / 19.5px Arial, Helvetica, sans-serif;
   outline: rgb(73, 73, 74) none 0px;
-}/*#DIV_12*/
+}
 
 #DIV_14 {
   box-sizing: border-box;
@@ -360,26 +315,7 @@
   font: normal normal 700 normal 9.75px / 14.625px Arial, Helvetica, sans-serif;
   outline: rgb(136, 136, 136) none 0px;
   padding: 3px;
-}/*#BUTTON_18*/
-
-#INPUT_19 {
-  color: rgb(73, 73, 74);
-  cursor: default;
-  display: none;
-  height: 35px;
-  text-decoration: none solid rgb(73, 73, 74);
-  text-size-adjust: 100%;
-  width: auto;
-  column-rule-color: rgb(73, 73, 74);
-  perspective-origin: 50% 50%;
-  transform-origin: 50% 50%;
-  caret-color: rgb(73, 73, 74);
-  background: rgba(0, 0, 0, 0) none repeat scroll 0% 0% / auto padding-box border-box;
-  border: 0px none rgb(195, 196, 196);
-  font: normal normal 400 normal 15px / normal Arial, Helvetica, sans-serif;
-  outline: rgb(73, 73, 74) none 0px;
-  padding: 0px;
-}/*#INPUT_19*/
+}
 
 #BUTTON_20 {
   background-position: 0px 75%;
@@ -720,27 +656,6 @@
   outline: rgb(73, 73, 74) none 0px;
 }/*#DIV_41*/
 
-#DIV_41:after {
-  box-sizing: border-box;
-  clear: both;
-  color: rgb(73, 73, 74);
-  content: '""';
-  cursor: pointer;
-  display: table;
-  height: 0px;
-  text-decoration: none solid rgb(73, 73, 74);
-  text-shadow: rgba(0, 0, 0, 0.004) 1px 1px 1px;
-  text-size-adjust: 100%;
-  width: 0px;
-  column-rule-color: rgb(73, 73, 74);
-  perspective-origin: 0px 0px;
-  transform-origin: 0px 0px;
-  caret-color: rgb(73, 73, 74);
-  border: 0px none rgb(73, 73, 74);
-  font: normal normal 400 normal 17px / 25.5px Arial, Helvetica, sans-serif;
-  outline: rgb(73, 73, 74) none 0px;
-}/*#DIV_41:after*/
-
 #DIV_42 {
   bottom: 0px;
   box-sizing: border-box;
@@ -890,3 +805,7 @@
   outline: rgb(73, 73, 74) none 0px;
 }/*#SPAN_50*/
 
+.alert {
+  padding: 0;
+  margin: 0;
+}
