--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -44,7 +44,7 @@
     </a>
   </div>
   <div>
-    <h1>Shopping History</h1>
+    <h1>Shopping History!!</h1>
 
     <a routerLink="history" id="history" >See your full history</a>
   </div>
