--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,10 @@
-<h1>
-  {{title}}
-  <p>This is some change to push</p>
-</h1>
+<div class="page">
+<div class="app">
+    <app-header>
+   </app-header>
+   
+</div>
+<div class="foo">
+<app-footer>
+</app-footer>
+</div>
