--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,4 @@
-<div class="page">
-<div class="app">
-    <app-header>
-   </app-header>
-   
-</div>
-<div class="foo">
-<app-footer>
-</app-footer>
-</div>
+<app-header></app-header>
+<app-home>
+  <app-home>
+    <app-footer></app-footer>
