--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,7 +14,7 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-        <img src=".../cb7.jpg" alt="Laptops">
+        <img src="cb7.jpg" alt="Laptops">
         <div class="carousel-caption">
           <h3>Hi</h3>
           <p>Thank you!!</p>
