--- a/src/app/create-user/create-user.component.html
+++ b/src/app/create-user/create-user.component.html
@@ -1,6 +1,6 @@
 
 <div *ngIf="!f_firstName; else forminfo">
-  <form [formGroup]="rForm" (ngSubmit)="addPost(rForm.value)">
+  <form #f="ngForm" [formGroup]="rForm" (ngSubmit)="addPost(rForm.value)">
     <div class="form-container">
 
       <div class="row columns">
@@ -32,14 +32,13 @@
         <label>Confirm Password
           <input type= "{{ isActive? 'text':'password'}}" formControlName="f_passwordCheck">
         </label>
-        <div class="alert" *ngIf="!rForm.controls['f_passwordCheck'].valid && rForm.controls['f_passwordCheck'].touched">Passwords do not match.</div>
+        <div class="alert" *ngIf="cpwd.hasError('invalid') && rForm.controls['f_passwordCheck'].touched" >Passwords do not match.</div>
 
         <br>
         <input type="checkbox" [(ngModel)]="checkboxValue"   (change)="newFunction()" name="validateCheckbox" formControlName="validateCheckbox" >  Show Password<br>
-        <!--<input [(ngModel)]="checkboxValue" (change)="newFunction()" type="checkbox" name="validateCheckbox"  id="myonoffswitch" checked>-->
         <br>
         <label>Phone Number
-          <input type="number" formControlName="f_number">
+          <input type="text" formControlName="f_number">
         </label>
         <div class="alert" *ngIf="!rForm.controls['f_number'].valid && rForm.controls['f_number'].touched">Please enter a valid phone number.</div>
 
