--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,173 +1,176 @@
 <footer id="FOOTER_1">
-<div id="DIV_2">
-<div id="DIV_3">
-<form id="FORM_4">
-<label for="" id="LABEL_5">
-Get the Latest Deals  More
-</label>
-<input type="text" id="INPUT_6" name="email" placeholder="Enter E-Mail Address" />
-<input type="submit" value="Sign Up" id="INPUT_7" />
-</form><a href="" id="A_8"><span id="SPAN_9">BEST BUY APP</span><span id="SPAN_10">Learn more ›</span></a>
-<div id="DIV_11">
-</div>
-</div>
-</div>
-<div id="DIV_12">
-<div id="DIV_13">
-<div id="DIV_14">
-<div id="DIV_15">
-<a href="" id="A_16">My Best Buy ›</a>
-<ul id="UL_17">
-<li id="LI_18">
-<a href="" id="A_19">View Points Certificates</a>
-</li>
-<li id="LI_20">
-<a href="" id="A_21">Member Offers</a>
-</li>
-<li id="LI_22">
-<a href="" id="A_23">Sign in or Create Account</a>
-</li>
-</ul>
-</div>
-<div id="DIV_24">
-<a href="" id="A_25">Credit Cards ›</a>
-<ul id="UL_26">
-	<li id="LI_27">
-		<a href="" id="A_28">Make Payment/Check Balance</a>
-	</li>
-	<li id="LI_29">
-		<a href="" id="A_30">Credit Card Offers</a>
-	</li>
-	<li id="LI_31">
-		<a href="" id="A_32">Apply Now</a>
-	</li>
-</ul>
-</div>
-</div>
-<div id="DIV_33">
-<div id="DIV_34">
-<a href="" id="A_35">Orders  Returns ›</a>
-<ul id="UL_36">
-	<li id="LI_37">
-		<a href="" id="A_38">Order Status</a>
-	</li>
-	<li id="LI_39">
-		<a href="" id="A_40">Shipping, Delivery  Store Pickup</a>
-	</li>
-	<li id="LI_41">
-		<a href="" id="A_42">Return  Exchange Promise</a>
-	</li>
-	<li id="LI_43">
-		<a href="" id="A_44">Price Match Guarantee</a>
-	</li>
-	<li id="LI_45">
-		<a href="" id="A_46">Pay with Points</a>
-	</li>
-</ul>
-</div>
-</div>
-<div id="DIV_47">
-<div id="DIV_48">
-<a href="" id="A_49">Support  Services ›</a>
-<ul id="UL_50">
-	<li id="LI_51">
-		<a href="" id="A_52">Customer Service</a>
-	</li>
-	<li id="LI_53">
-		<a href="" id="A_54">Protection Plans</a>
-	</li>
-	<li id="LI_55">
-		<a href="" id="A_56">Schedule a Service</a>
-	</li>
-	<li id="LI_57">
-		<a href="" id="A_58">Trade-In Program</a>
-	</li>
-	<li id="LI_59">
-		<a href="" id="A_60">Product Recalls</a>
-	</li>
-</ul>
-</div>
-</div>
-<div id="DIV_61">
-<div id="DIV_62">
-<a href="" id="A_63">Partnerships ›</a>
-<ul id="UL_64">
-	<li id="LI_65">
-		<a href="" id="A_66">Affiliate Program</a>
-	</li>
-	<li id="LI_67">
-		<a href="" id="A_68">Developers</a>
-	</li>
-	<li id="LI_69">
-		<a href="" id="A_70">Best Buy Ignite</a>
-	</li>
-	<li id="LI_71">
-		<a href="" id="A_72">Best Buy for Education</a>
-	</li>
-	<li id="LI_73">
-		<a href="" id="A_74">Best Buy Direct</a>
-	</li>
-	<li id="LI_75">
-		<a href="" id="A_76">Advertise with Us</a>
-	</li>
-</ul>
-</div>
-</div>
-<div id="DIV_77">
-</div>
-</div>
-<div id="DIV_78">
-<div id="DIV_79">
-<nav id="NAV_80">
-<ul id="UL_81">
-	<li id="LI_82">
-		<a href="" id="A_83">Corporate Information</a>
-	</li>
-	<li id="LI_84">
-		<a href="" id="A_85">Forums, Blog  More</a>
-	</li>
-	<li id="LI_86">
-		<a href="" id="A_87">Careers</a>
-	</li>
-	<li id="LI_88">
-		<a href="" id="A_89">Accessibility</a>
-	</li>
-	<li id="LI_90">
-		<a href="" id="A_91">Terms and Conditions</a>
-	</li>
-	<li id="LI_92">
-		<a href="" id="A_93">Privacy</a>
-	</li>
-	<li id="LI_94">
-		<a href="" id="A_95">Interest-Based Ads</a>
-	</li>
-	<li id="LI_96">
-		<a href="" id="A_97">California Privacy Rights</a>
-	</li>
-	<li id="LI_98">
-		<a href="" id="A_99">CA Supply Chain Transparency Act</a>
-	</li>
-</ul>
-</nav>
-</div>
-<div id="DIV_100">
-</div>
-</div>
+  <div id="DIV_2">
+    <div id="DIV_3">
+      <form id="FORM_4">
+        <label for="" id="LABEL_5">
+          Get the Latest Deals More
+        </label>
+        <input type="text" id="INPUT_6" name="email" placeholder="Enter E-Mail Address"/>
+        <input type="submit" value="Sign Up" id="INPUT_7"/>
+      </form>
+      <a href="" id="A_8"><span id="SPAN_9">BEST BUY APP</span><span id="SPAN_10">Learn more ›</span></a>
+      <div id="DIV_11">
+      </div>
+    </div>
+  </div>
+  <div id="DIV_12">
+    <div id="DIV_13">
+      <div id="DIV_14">
+        <div id="DIV_15">
+          <a href="" id="A_16">My Best Buy ›</a>
+          <ul id="UL_17">
+            <li id="LI_18">
+              <a href="" id="A_19">View Points Certificates</a>
+            </li>
+            <li id="LI_20">
+              <a href="" id="A_21">Member Offers</a>
+            </li>
+            <li id="LI_22">
+              <a href="" id="A_23">Sign in or Create Account</a>
+            </li>
+          </ul>
+        </div>
+        <div id="DIV_24">
+          <a href="" id="A_25">Credit Cards ›</a>
+          <ul id="UL_26">
+            <li id="LI_27">
+              <a href="" id="A_28">Make Payment/Check Balance</a>
+            </li>
+            <li id="LI_29">
+              <a href="" id="A_30">Credit Card Offers</a>
+            </li>
+            <li id="LI_31">
+              <a href="" id="A_32">Apply Now</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div id="DIV_33">
+        <div id="DIV_34">
+          <a href="" id="A_35">Orders Returns ›</a>
+          <ul id="UL_36">
+            <li id="LI_37">
+              <a href="" id="A_38">Order Status</a>
+            </li>
+            <li id="LI_39">
+              <a href="" id="A_40">Shipping, Delivery Store Pickup</a>
+            </li>
+            <li id="LI_41">
+              <a href="" id="A_42">Return Exchange Promise</a>
+            </li>
+            <li id="LI_43">
+              <a href="" id="A_44">Price Match Guarantee</a>
+            </li>
+            <li id="LI_45">
+              <a href="" id="A_46">Pay with Points</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div id="DIV_47">
+        <div id="DIV_48">
+          <a href="" id="A_49">Support Services ›</a>
+          <ul id="UL_50">
+            <li id="LI_51">
+              <a href="" id="A_52">Customer Service</a>
+            </li>
+            <li id="LI_53">
+              <a href="" id="A_54">Protection Plans</a>
+            </li>
+            <li id="LI_55">
+              <a href="" id="A_56">Schedule a Service</a>
+            </li>
+            <li id="LI_57">
+              <a href="" id="A_58">Trade-In Program</a>
+            </li>
+            <li id="LI_59">
+              <a href="" id="A_60">Product Recalls</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div id="DIV_61">
+        <div id="DIV_62">
+          <a href="" id="A_63">Partnerships ›</a>
+          <ul id="UL_64">
+            <li id="LI_65">
+              <a href="" id="A_66">Affiliate Program</a>
+            </li>
+            <li id="LI_67">
+              <a href="" id="A_68">Developers</a>
+            </li>
+            <li id="LI_69">
+              <a href="" id="A_70">Best Buy Ignite</a>
+            </li>
+            <li id="LI_71">
+              <a href="" id="A_72">Best Buy for Education</a>
+            </li>
+            <li id="LI_73">
+              <a href="" id="A_74">Best Buy Direct</a>
+            </li>
+            <li id="LI_75">
+              <a href="" id="A_76">Advertise with Us</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div id="DIV_77">
+      </div>
+    </div>
+    <div id="DIV_78">
+      <div id="DIV_79">
+        <nav id="NAV_80">
+          <ul id="UL_81">
+            <li id="LI_82">
+              <a href="" id="A_83">Corporate Information</a>
+            </li>
+            <li id="LI_84">
+              <a href="" id="A_85">Forums, Blog More</a>
+            </li>
+            <li id="LI_86">
+              <a href="" id="A_87">Careers</a>
+            </li>
+            <li id="LI_88">
+              <a href="" id="A_89">Accessibility</a>
+            </li>
+            <li id="LI_90">
+              <a href="" id="A_91">Terms and Conditions</a>
+            </li>
+            <li id="LI_92">
+              <a href="" id="A_93">Privacy</a>
+            </li>
+            <li id="LI_94">
+              <a href="" id="A_95">Interest-Based Ads</a>
+            </li>
+            <li id="LI_96">
+              <a href="" id="A_97">California Privacy Rights</a>
+            </li>
+            <li id="LI_98">
+              <a href="" id="A_99">CA Supply Chain Transparency Act</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <div id="DIV_100">
+      </div>
+    </div>
 
-<div id="DIV_114">
-<a href="" id="A_115">Mobile Site</a>
-</div>
-<div id="DIV_116">
-<a href="" id="A_117">Give Feedback</a>
-</div>
-<div id="DIV_118">
-<div id="DIV_119">
-<p id="P_120">
-Prices and offers are subject to change 2018 Best Buy. All rights reserved. BEST BUY, the BEST BUY logo, the tag design, MY BEST BUY, and BESTBUY.COM are trademarks of Best Buy and its affiliated companies.
-</p>
-</div><a href="" id="A_121"><img src="" alt="" id="IMG_122" /></a>
-<div id="DIV_123">
-</div>
-</div>
-</div>
+    <div id="DIV_114">
+      <a href="" id="A_115">Mobile Site</a>
+    </div>
+    <div id="DIV_116">
+      <a href="" id="A_117">Give Feedback</a>
+    </div>
+    <div id="DIV_118">
+      <div id="DIV_119">
+        <p id="P_120">
+          Prices and offers are subject to change 2018 Best Buy. All rights reserved. BEST BUY, the BEST BUY logo, the
+          tag design, MY BEST BUY, and BESTBUY.COM are trademarks of Best Buy and its affiliated companies.
+        </p>
+      </div>
+      <a href="" id="A_121"><img src="" alt="" id="IMG_122"/></a>
+      <div id="DIV_123">
+      </div>
+    </div>
+  </div>
 </footer>
