--- a/src/app/user-login/user-login.component.html
+++ b/src/app/user-login/user-login.component.html
@@ -1,21 +1,69 @@
-<p>
-  user-login works!
-</p>
-
-
-
-
-
-
-git branch "mohan/login-page"
-git checkout mohan/lagin-page
-
-work on your branch
-
-git status
-git add . / this adds all the files
-git add filename / this adds individual files
-
-git commit -m "some commit message"
-
-git push
+<main id="MAIN_1">
+  <div id="DIV_2">
+    <div id="DIV_3">
+      <div id="DIV_4">
+        <div id="DIV_5">
+          <h1 id="H1_6">
+            Sign In to EgiantsEcommerce.com
+          </h1>
+          <div id="DIV_7">
+          </div>
+          <form novalidate [formGroup]="form" (ngSubmit)="UserLogin(form)" action="/" name="ciaSignOn" id="FORM_8">
+            <div class="form-group" id="DIV_9">
+              <label id="LABEL_10">
+                E-Mail Address
+              </label>
+              <input type="email" class="form-control" formControlName="email" name="email" id="INPUT_11" />
+              <div class="alert alert-danger" *ngIf="form.get('email').touched && !form.get('email').valid">
+                <div *ngIf="form.get('email').hasError('required')">
+                  email is required
+                </div>
+                <div *ngIf="form.get('email').hasError('pattern')">
+                  Enter email in format ex: xyz@mail.com
+                </div>
+              </div>
+            </div>
+            <div class="form-group" id="DIV_12">
+              <label id="LABEL_13">
+                Password
+              </label>
+              <div id="DIV_14">
+                <a href="#forgotPassword" id="A_15">Forgot Password?</a>
+              </div>
+              <div id="DIV_16">
+                <input [type]="isPWDActive ? 'password' : 'text'" class="form-control" formControlName="psw" name="password" id="INPUT_17" />
+                <div class="alert alert-danger" *ngIf="form.get('psw').touched && form.get('psw').invalid">
+                  <div *ngIf="form.get('psw').hasError('required')">
+                    password is required
+                  </div>
+                  <div *ngIf="form.get('psw').hasError('pattern')">
+                    Password must contain an uppercase letter, a number, a special character, atleast 8 characters
+                  </div>
+                </div>
+                <button name="button" id="BUTTON_18" (click)="toggle()">
+                  <span *ngIf="isPWDActive">Show</span>
+                  <span *ngIf="!isPWDActive">Hide</span>
+                </button>
+              </div>
+            </div>
+            <button type="submit" id="BUTTON_20">
+              <span id="SPAN_21"></span><span id="SPAN_22">Sign In</span>
+            </button><span id="SPAN_23">By continuing you agree to our <a href="#" id="A_24">Terms and Conditions</a> and the <a href="#" id="A_25">My EgiantsEcommerceng<span id="SPAN_26">®</span> Program Terms.</a></span><span id="SPAN_27">Forgot your password? <a href="#forgotPassword" id="A_28">Reset it</a></span>
+            <div id="DIV_29">
+            </div>
+          </form>
+          <div id="DIV_41">
+            <div id="DIV_42">
+              <div id="DIV_43">
+                Don't have an account? <a href="#" id="A_44">Create One</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div id="DIV_49">
+    <span id="SPAN_50"></span>
+  </div>
+</main>
