--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,6 @@
 
 
 <div class="container">
-  <h2> Egiants Best Buy</h2>
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -14,22 +13,19 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-        <img src=".../cb7.jpg" alt="Laptops">
-        <div class="carousel-caption">
-          <h3>Hi</h3>
-          <p>Thank you!!</p>
-        </div>
+        <img src="../../assets/computers.jpg " alt="Laptops">
+
       </div>
 
       <div class="item">
-        <img src=".../cb5.jpg" alt="mobiles">
+        <img src="../../assets/mobiles.jpg" alt="Mobiles">
       </div>
 
       <div class="item">
-        <img src=".../cb10.jpg" alt="ipads">
+        <img src="../../assets/ipads.jpg" alt="Ipads">
       </div>
       <div class="item">
-        <img src=".../cb9.jpg" alt="iwatches">
+        <img src="../../assets/iwatches.jpg" alt="Iwatches">
       </div>
     </div>
 
@@ -43,11 +39,7 @@
       <span class="sr-only">Next</span>
     </a>
   </div>
-  <div>
-    <h1>Shopping History!!</h1>
 
-    <a routerLink="history" id="history" >See your full history</a>
-  </div>
 </div>
-<router-outlet></router-outlet>
+
 
