Added Routing to the app

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -74,7 +74,15 @@
 <li id="LIServices">
 <a href="" id="AServices">Services</a>
 </li>
+  <li id="LIRegister">
+    <a routerLink="/register" id="ARegister">Register</a>
+  </li>
+  <li id="LISignin">
+    <a routerLink="/login" id="ASignin">Sign In</a>
+  </li>
 </ul>
 </nav>
+  <router-outlet></router-outlet>
 </div>
+
 
