--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,2 @@
 
-<!--<app-user-login></app-user-login>-->
-<!--<app-create-user></app-create-user>-->
-<app-header></app-header>
-<app-home>
-</app-home>
-<app-footer></app-footer>
-
-
+<router-outlet></router-outlet>
