--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div class="container">
 
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
@@ -38,5 +39,5 @@
 
 </div>
 
-
+<app-footer></app-footer>
 
